include examples of block matrices

--- a/Content/block_matrices.ipynb
+++ b/Content/block_matrices.ipynb
@@ -302,8 +302,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's consider the particular case in which "
+    "Let's now consider two particular cases. In both cases, the matrices $\\mathbf{B}$ and $\\mathbf{C}$ are replaced by vectors $\\mathbf{b}$ and $\\mathbf{c}$, respectively."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='block_matrices_4.png', width = 500>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src='block_matrices_5.png', width = 500>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
