--- a/Content/lu_decomp_pivoting.ipynb
+++ b/Content/lu_decomp_pivoting.ipynb
@@ -161,10 +161,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
@@ -172,10 +170,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "p = np.arange(10)"
@@ -183,27 +179,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 1 2 3 4 5 6 7 8 9]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.random.shuffle(p)"
@@ -211,27 +197,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 0 2 6 8 4 5 3 9 7]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "P = np.identity(p.size)[p]"
@@ -239,46 +215,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.  1.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 1.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  1.  0.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  1.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  1.  0.]\n",
-      " [ 0.  0.  0.  0.  1.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  1.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  1.  0.  0.  0.  0.  0.  0.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  1.]\n",
-      " [ 0.  0.  0.  0.  0.  0.  0.  1.  0.  0.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print P"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.allclose(np.dot(P.T,P), np.identity(p.size))"
    ]
@@ -554,10 +502,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.linalg import lu"
@@ -565,10 +511,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "N = 5\n",
@@ -577,10 +521,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "P_sp, L_sp, U_sp = lu(A)"
@@ -588,23 +530,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.allclose(A, np.dot(P_sp, np.dot(L_sp,U_sp)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -623,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
