finish the notes about block matrices

--- a/Content/block_matrices.ipynb
+++ b/Content/block_matrices.ipynb
@@ -302,7 +302,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's now consider two particular cases. In both cases, the matrices $\\mathbf{B}$ and $\\mathbf{C}$ are replaced by vectors $\\mathbf{b}$ and $\\mathbf{c}$, respectively."
+    "Let's now consider two particular cases. In both cases, the matrices $\\mathbf{B}$ and $\\mathbf{C}$ are replaced by vectors $\\mathbf{b}$ and $\\mathbf{c}$, respectively, as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\mathbf{A} \\mathbf{b} = \\mathbf{c} \\: .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the first case, the matrix $\\mathbf{A}$ is partitioned into columns and the vector $\\mathbf{b}$ is divided into three vectors:"
    ]
   },
   {
@@ -316,15 +332,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In the next example, the matrix $\\mathbf{A}$ is partitioned into rows and the vector $\\mathbf{c}$ is divided into two vectors:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<img src='block_matrices_5.png', width = 500>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Exercise (extra)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let $\\mathbf{A}$ and $\\mathbf{B}$ be two complex matrices given by:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{A} = \\tilde{\\mathbf{A}} + i \\, \\breve{\\mathbf{A}}\n",
+    "$$\n",
+    "\n",
+    "and\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{B} = \\tilde{\\mathbf{B}} + i \\, \\breve{\\mathbf{B}} \\: ,\n",
+    "$$\n",
+    "\n",
+    "where $i = \\sqrt{-1}$. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's consider that the complex matrix $\\mathbf{C} = \\tilde{\\mathbf{C}} + i \\, \\breve{\\mathbf{C}}$ obtained by the product of $\\mathbf{A}$ and $\\mathbf{B}$. In this case, show that the relationship between the submatrices $\\tilde{\\mathbf{A}}$, $\\tilde{\\mathbf{B}}$, $\\tilde{\\mathbf{C}}$, $\\breve{\\mathbf{A}}$, $\\breve{\\mathbf{B}}$ and $\\breve{\\mathbf{C}}$ is given by:\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "\\tilde{\\mathbf{C}} \\\\\n",
+    "\\breve{\\mathbf{C}}\n",
+    "\\end{bmatrix} =\n",
+    "\\begin{bmatrix}\n",
+    "\\tilde{\\mathbf{A}} & -\\breve{\\mathbf{A}} \\\\\n",
+    "\\breve{\\mathbf{A}} &  \\tilde{\\mathbf{A}}\n",
+    "\\end{bmatrix}\n",
+    "\\begin{bmatrix}\n",
+    "\\tilde{\\mathbf{B}} \\\\\n",
+    "\\breve{\\mathbf{B}}\n",
+    "\\end{bmatrix} \\: .\n",
+    "$$"
+   ]
   }
  ],
  "metadata": {
