replace the matrix Q by the matrix Q tilde

--- a/Content/lu_decomp_pivoting.ipynb
+++ b/Content/lu_decomp_pivoting.ipynb
@@ -71,11 +71,11 @@
     "\\left( \\mathbf{I} - \\mathbf{M}^{(1)} \\right) \\mathbf{P}^{(1)} \\,\n",
     "\\mathbf{A} \\\\\n",
     "&=\n",
-    "\\underbrace{\\left( \\mathbf{I} - \\mathbf{M}^{(2)} \\right)}_{\\mathbf{Q}^{(2)}} \\,\n",
-    "\\underbrace{\\mathbf{P}^{(2)} \\left( \\mathbf{I} - \\mathbf{M}^{(1)} \\right) \\mathbf{P}^{(-2)}}_{\\mathbf{Q}^{(1)}} \\,\n",
+    "\\underbrace{\\left( \\mathbf{I} - \\mathbf{M}^{(2)} \\right)}_{\\tilde{\\mathbf{Q}}^{(2)}} \\,\n",
+    "\\underbrace{\\mathbf{P}^{(2)} \\left( \\mathbf{I} - \\mathbf{M}^{(1)} \\right) \\mathbf{P}^{(-2)}}_{\\tilde{\\mathbf{Q}}^{(1)}} \\,\n",
     "\\underbrace{\\mathbf{P}^{(2)} \\mathbf{P}^{(1)}}_{\\mathbf{P}} \\,\n",
     "\\mathbf{A} \\\\\n",
-    "&= \\mathbf{Q} \\mathbf{P} \\mathbf{A}\n",
+    "&= \\tilde{\\mathbf{Q}} \\mathbf{P} \\mathbf{A}\n",
     "\\end{split} \\: ,\n",
     "$$"
    ]
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{P}^{(-k)} \\equiv \\left( \\mathbf{P}^{(k)} \\right)^{-1}$, $\\mathbf{P} = \\mathbf{P}^{(N-1)}\\mathbf{P}^{(N-2)} \\cdots  \\mathbf{P}^{(1)}$, $\\mathbf{Q} = \\mathbf{Q}^{(N-1)} \\mathbf{Q}^{(N-2)} \\cdots \\mathbf{Q}^{(1)}$, $N = 3$."
+    "where $\\mathbf{P}^{(-k)} \\equiv \\left( \\mathbf{P}^{(k)} \\right)^{-1}$, $\\mathbf{P} = \\mathbf{P}^{(N-1)}\\mathbf{P}^{(N-2)} \\cdots  \\mathbf{P}^{(1)}$, $\\tilde{\\mathbf{Q}} = \\tilde{\\mathbf{Q}}^{(N-1)} \\tilde{\\mathbf{Q}}^{(N-2)} \\cdots \\tilde{\\mathbf{Q}}^{(1)}$, $N = 3$. It is worth noting the diference between the matrix $\\tilde{\\mathbf{Q}}$ presented here and the matrix $\\mathbf{Q}$ presented in the previous notebook."
    ]
   },
   {
@@ -99,7 +99,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\mathbf{P}\\mathbf{A} = \\mathbf{Q}^{-1} \\, \\mathbf{A}^{(2)} \\: ,\n",
+    "\\mathbf{P}\\mathbf{A} = \\tilde{\\mathbf{Q}}^{-1} \\, \\mathbf{A}^{(2)} \\: ,\n",
     "$$"
    ]
   },
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{Q}^{-1} = \\mathbf{Q}^{(-1)} \\mathbf{Q}^{(-2)}$, $\\mathbf{Q}^{(-k)} \\equiv \\left( \\mathbf{Q}^{(k)} \\right)^{-1}$. As in the previous class, we need to know how to define a generic $\\mathbf{Q}^{(-k)}$. Let's first define a generic $\\mathbf{Q}^{(k)}$ as follows:"
+    "where $\\tilde{\\mathbf{Q}}^{-1} = \\tilde{\\mathbf{Q}}^{(-1)} \\tilde{\\mathbf{Q}}^{(-2)}$, $\\tilde{\\mathbf{Q}}^{(-k)} \\equiv \\left( \\tilde{\\mathbf{Q}}^{(k)} \\right)^{-1}$. As in the previous class, we need to know how to define a generic $\\tilde{\\mathbf{Q}}^{(-k)}$. Let's first define a generic $\\tilde{\\mathbf{Q}}^{(k)}$ as follows:"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\mathbf{Q}^{(k)} = \n",
+    "\\tilde{\\mathbf{Q}}^{(k)} = \n",
     "\\tilde{\\mathbf{P}}^{(k)} \\, \\left( \\mathbf{I} - \\mathbf{M}^{(k)} \\right) \\, \\tilde{\\mathbf{P}}^{(-k)} \\: ,\n",
     "$$"
    ]
@@ -138,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then, a generic $\\mathbf{Q}^{(-k)}$ is given by:"
+    "Then, a generic $\\tilde{\\mathbf{Q}}^{(-k)}$ is given by:"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\mathbf{Q}^{(-k)} = \\tilde{\\mathbf{P}}^{(-k)} \\,\n",
+    "\\tilde{\\mathbf{Q}}^{(-k)} = \\tilde{\\mathbf{P}}^{(-k)} \\,\n",
     "\\left( \\mathbf{I} + \\mathbf{M}^{(k)} \\right) \\,\n",
     "\\tilde{\\mathbf{P}}^{(k)} \\: .\n",
     "$$"
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,16 +179,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n"
+     ]
+    }
+   ],
    "source": [
     "print p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,16 +205,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 2 0 8 7 4 3 1 9 6]\n"
+     ]
+    }
+   ],
    "source": [
     "print p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,18 +231,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  0.  0.  0.  0.  1.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  1.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 1.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  1.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  1.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  1.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  1.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  1.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  1.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  1.  0.  0.  0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "print P"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.allclose(np.dot(P.T,P), np.identity(p.size))"
    ]
@@ -235,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's analyze the matrix $\\mathbf{Q}^{(-k)}$:"
+    "Now, let's analyze the matrix $\\tilde{\\mathbf{Q}}^{(-k)}$:"
    ]
   },
   {
@@ -244,7 +288,7 @@
    "source": [
     "$$\n",
     "\\begin{split}\n",
-    "\\mathbf{Q}^{(-k)} &= \\tilde{\\mathbf{P}}^{(-k)} \\,\n",
+    "\\tilde{\\mathbf{Q}}^{(-k)} &= \\tilde{\\mathbf{P}}^{(-k)} \\,\n",
     "\\left( \\mathbf{I} + \\mathbf{M}^{(k)} \\right) \\,\n",
     "\\tilde{\\mathbf{P}}^{(k)} \\\\\n",
     "&= \\mathbf{I} + \\tilde{\\mathbf{P}}^{(-k)} \\,\n",
@@ -261,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the matrix $\\tilde{\\mathbf{P}}^{(-k)}$ swaps the elements $\\left[ \\, k+1 \\, : \\, \\right]$ of $\\mathbf{t}^{(k)}$, resulting in a new vector $\\tilde{\\mathbf{t}}^{(k)} = \\tilde{\\mathbf{P}}^{(-k)} \\, \\mathbf{t}^{(k)}$. Similarly, the matrix $\\tilde{\\mathbf{P}}^{(k)}$ swaps the elements $\\left[ \\, k+1 \\, : \\, \\right]$ of $\\left( \\mathbf{u}^{(k)} \\right)^{\\top}$ and, consequently, $\\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\, \\tilde{\\mathbf{P}}^{(k)} = \\left( \\mathbf{u}^{(k)} \\right)^{\\top}$. Then, the matrix $\\mathbf{Q}^{(-k)}$ can be rewritten as follows:"
+    "Notice that the matrix $\\tilde{\\mathbf{P}}^{(-k)}$ swaps the elements $\\left[ \\, k+1 \\, : \\, \\right]$ of $\\mathbf{t}^{(k)}$, resulting in a new vector $\\tilde{\\mathbf{t}}^{(k)} = \\tilde{\\mathbf{P}}^{(-k)} \\, \\mathbf{t}^{(k)}$. Similarly, the matrix $\\tilde{\\mathbf{P}}^{(k)}$ swaps the elements $\\left[ \\, k+1 \\, : \\, \\right]$ of $\\left( \\mathbf{u}^{(k)} \\right)^{\\top}$ and, consequently, $\\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\, \\tilde{\\mathbf{P}}^{(k)} = \\left( \\mathbf{u}^{(k)} \\right)^{\\top}$. Then, the matrix $\\tilde{\\mathbf{Q}}^{(-k)}$ can be rewritten as follows:"
    ]
   },
   {
@@ -269,7 +313,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\mathbf{Q}^{(-k)} = \\mathbf{I} + \\tilde{\\mathbf{t}}^{(k)} \\otimes \\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\: .\n",
+    "\\tilde{\\mathbf{Q}}^{(-k)} = \\mathbf{I} + \\tilde{\\mathbf{t}}^{(k)} \\otimes \\left( \\mathbf{u}^{(k)} \\right)^{\\top} \\: .\n",
     "$$"
    ]
   },
@@ -277,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By using this result, we can verify that the matrix $\\mathbf{Q}^{-1}$ is given by:"
+    "By using this result, we can verify that the matrix $\\tilde{\\mathbf{Q}}^{-1}$ is given by:"
    ]
   },
   {
@@ -286,7 +330,7 @@
    "source": [
     "$$\n",
     "\\begin{split}\n",
-    "\\mathbf{Q}^{-1}\n",
+    "\\tilde{\\mathbf{Q}}^{-1}\n",
     "&= \\left[ \\mathbf{I} + \\tilde{\\mathbf{t}}^{(1)} \\otimes \\left( \\mathbf{u}^{(1)} \\right)^{\\top} \\right]\n",
     "   \\left[ \\mathbf{I} + \\tilde{\\mathbf{t}}^{(2)} \\otimes \\left( \\mathbf{u}^{(2)} \\right)^{\\top} \\right] \\\\\n",
     "&= \\mathbf{I} + \\tilde{\\mathbf{t}}^{(1)} \\otimes \\left( \\mathbf{u}^{(1)} \\right)^{\\top} +\n",
@@ -326,7 +370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "which is a unit **L**ower triangular matrix containing the permuted Gauss multipliers. Notice that this matrix $\\mathbf{Q}^{-1}$ differs from that one presented in the previous class because the Gauss multipliers are permuted. Similarly to the previous class, the **U**pper triangular matrix $\\mathbf{A}^{(2)}$ is defined as $\\mathbf{U}$ and the original matrix $\\mathbf{A}$ is factored as follows:"
+    "which is a unit **L**ower triangular matrix containing the permuted Gauss multipliers. Notice that this matrix $\\tilde{\\mathbf{Q}}^{-1}$ differs from that one presented in the previous class because the Gauss multipliers are permuted. Similarly to the previous class, the **U**pper triangular matrix $\\mathbf{A}^{(2)}$ is defined as $\\mathbf{U}$ and the original matrix $\\mathbf{A}$ is factored as follows:"
    ]
   },
   {
@@ -334,7 +378,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\mathbf{P} \\, \\mathbf{A} = \\mathbf{L} \\, \\mathbf{U} \\: ,\n",
+    "\\mathbf{P} \\, \\mathbf{A} = \\tilde{\\mathbf{L}} \\, \\mathbf{U} \\: ,\n",
     "$$"
    ]
   },
@@ -342,7 +386,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{P}$ is the product of all permutation matrices."
+    "where $\\mathbf{P}$ is the product of all permutation matrices. Notice that the lower triangular matrix $\\tilde{\\mathbf{L}}$ presented here is different from the lower triangular matrix $\\mathbf{L}$ presented in the previous notebook."
    ]
   },
   {
@@ -423,7 +467,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once the permutation matrix $\\mathbf{P}$ and the triangular matrices $\\mathbf{L}$ and $\\mathbf{U}$ are calculated, we may use them to solve a linear system $\\mathbf{A} \\mathbf{x} = \\mathbf{y}$. Let's first substitute the LU decomposition into the linear system:"
+    "Once the permutation matrix $\\mathbf{P}$ and the triangular matrices $\\tilde{\\mathbf{L}}$ and $\\mathbf{U}$ are calculated, we may use them to solve a linear system $\\mathbf{A} \\mathbf{x} = \\mathbf{y}$. Let's first substitute the LU decomposition into the linear system:"
    ]
   },
   {
@@ -434,7 +478,7 @@
     "\\begin{split}\n",
     "\\mathbf{A} \\mathbf{x} &= \\mathbf{y} \\\\\n",
     "\\mathbf{P} \\mathbf{A} \\mathbf{x} &= \\mathbf{P} \\mathbf{y} \\\\\n",
-    "\\mathbf{L} \\mathbf{U} \\mathbf{x} &= \\mathbf{P} \\mathbf{y}\n",
+    "\\tilde{\\mathbf{L}} \\mathbf{U} \\mathbf{x} &= \\mathbf{P} \\mathbf{y}\n",
     "\\end{split} \\: .\n",
     "$$"
    ]
@@ -452,7 +496,7 @@
    "source": [
     "$$\n",
     "\\begin{split}\n",
-    "\\mathbf{L}\\mathbf{w} &= \\mathbf{P} \\mathbf{y} \\\\\n",
+    "\\tilde{\\mathbf{L}}\\mathbf{w} &= \\mathbf{P} \\mathbf{y} \\\\\n",
     "\\mathbf{U}\\mathbf{x} &= \\mathbf{w}\n",
     "\\end{split} \\: ,\n",
     "$$"
@@ -476,7 +520,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we have learned in a previous class, each column of the inverse of a matrix can be computed by solving a linear system. It means that computing the inverse of an $N \\times N$ matrix requires the solution of $N$ linear systems. Note that, by using the Gaussian elimination (with or without partial pivoting), we need to compute and solve one equivalent triangular system for each one of the $N$ columns of the inverse matrix. If we instead use the LU decomposition (with or without partial pivoting), we need to compute the matrices $\\mathbf{L}$ and $\\mathbf{U}$ just once and use them to solve the $N$ required linear systems."
+    "As we have learned in a previous class, each column of the inverse of a matrix can be computed by solving a linear system. It means that computing the inverse of an $N \\times N$ matrix requires the solution of $N$ linear systems. Note that, by using the Gaussian elimination (with or without partial pivoting), we need to compute the triangular matrix just once, but a different 'data vector' for each one of the $N$ columns of the inverse matrix. If we instead use the LU decomposition (with or without partial pivoting), we need to compute the matrices $\\mathbf{L}$ and $\\mathbf{U}$ just once."
    ]
   },
   {
@@ -502,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,20 +574,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.allclose(A, np.dot(P_sp, np.dot(L_sp,U_sp)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
    ]
   },
   {
