ldlt and cholesky decompositions

--- a/Content/lu_decomp_pivoting.ipynb
+++ b/Content/lu_decomp_pivoting.ipynb
@@ -146,9 +146,9 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\tilde{\\mathbf{Q}}^{(-k)} = \\tilde{\\mathbf{P}}^{(-k)} \\,\n",
+    "\\tilde{\\mathbf{Q}}^{(-k)} = \\tilde{\\mathbf{P}}^{(k)} \\,\n",
     "\\left( \\mathbf{I} + \\mathbf{M}^{(k)} \\right) \\,\n",
-    "\\tilde{\\mathbf{P}}^{(k)} \\: .\n",
+    "\\tilde{\\mathbf{P}}^{(-k)} \\: .\n",
     "$$"
    ]
   },
