--- a/Content/epicenter.ipynb
+++ b/Content/epicenter.ipynb
@@ -768,7 +768,7 @@
     "        H = hessian()\n",
     "\n",
     "        # correction on the parameter vector\n",
-    "        dp = np.linalg.solve(H,-g)\n",
+    "        dp = linear_system(H,-g)\n",
     "\n",
     "        # predicte data produced by the new parameter vector p0+dp\n",
     "        d = predicted_data(vp,vs,x,y,p0+dp)\n",
@@ -865,7 +865,7 @@
     "        H = hessian()\n",
     "\n",
     "        # correction on the parameter vector\n",
-    "        dp = np.linalg.solve(H,-g)\n",
+    "        dp = linear_system(H,-g)\n",
     "\n",
     "        # predicte data produced by the new parameter vector p0+dp\n",
     "        d = predicted_data(vp,vs,x,y,p0+dp)\n",
@@ -992,7 +992,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use your functions for computing the Jacobian and Hessian matrices and implement the **Newton's**, **Gauss-Newton**, **Steepest Decent**, and **Levenberg-Marquardt** method.\n",
+    "By using one of your functions for solving linear systems and your functions for computing the Jacobian and Hessian matrices, implement the **Newton's**, **Gauss-Newton**, **Steepest Decent**, and **Levenberg-Marquardt** method.\n",
     "\n",
     "After estimating the epicenter by using these methods, use the [Auxiliary functions](#Auxiliary functions) to plot the results. The following cells present some results obtained with the Levenberg-Marquardt method:"
    ]
@@ -1067,7 +1067,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
