erros nas decomposicoes LU e LDLt

--- a/Content/ldlt_decomp.ipynb
+++ b/Content/ldlt_decomp.ipynb
@@ -476,6 +476,127 @@
     "\n",
     "6) Use the function implemented in item 3 to compute the inverse matrix and verify if $\\mathbf{A} \\mathbf{A}^{-1} = \\mathbf{I}$."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ldlt(A):\n",
+    "    N = A.shape[0]\n",
+    "    \n",
+    "    L = np.zeros((N,N))\n",
+    "    d = np.zeros(N)\n",
+    "\n",
+    "    #for j = 1:N\n",
+    "    for j in range(N):\n",
+    "\n",
+    "        #v = L[j,:j-1]*d[:j-1]\n",
+    "        v = L[j,:j]*d[:j]\n",
+    "\n",
+    "        #d[j] = A[j,j] - dot(L[j,:j-1], v[:j-1])\n",
+    "        d[j] = A[j,j] - np.dot(L[j,:j], v[:j])\n",
+    "\n",
+    "        #L[j+1:,j] = (A[j+1:,j] - dot(L[j+1:,:j-1],v[:j-1]))/d[j]\n",
+    "        L[j+1:,j] = (A[j+1:,j] - np.dot(L[j+1:,:j],v[:j]))/d[j]\n",
+    "        \n",
+    "        return L, d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = 5\n",
+    "A = np.reshape(np.random.rand(N*N), (N,N))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.67144818  0.56456904  0.41961263  0.65275313  0.03113899]\n",
+      " [ 0.98847055  0.52851954  0.6075698   0.06412598  0.21480163]\n",
+      " [ 0.07108071  0.14467005  0.8028226   0.66262614  0.04989618]\n",
+      " [ 0.05033082  0.79774816  0.71223589  0.81554282  0.49053002]\n",
+      " [ 0.41712207  0.66945643  0.40929267  0.38067434  0.45524212]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "L, d = ldlt(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.          0.          0.          0.          0.        ]\n",
+      " [ 1.47214719  0.          0.          0.          0.        ]\n",
+      " [ 0.1058618   0.          0.          0.          0.        ]\n",
+      " [ 0.07495861  0.          0.          0.          0.        ]\n",
+      " [ 0.6212275   0.          0.          0.          0.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.67144818  0.          0.          0.          0.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
