--- a/Content/ldlt_decomp.ipynb
+++ b/Content/ldlt_decomp.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,38 +108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "B = \n",
-      "[[ 0.89843375  0.30350636  0.13911497  0.88416058  0.09712178]\n",
-      " [ 0.          0.0801839   0.74634789  0.39969053  0.16566735]\n",
-      " [ 0.          0.          0.28926747  0.78656502  0.27631712]\n",
-      " [ 0.          0.          0.          0.02862008  0.03034395]\n",
-      " [ 0.          0.          0.          0.          0.5295557 ]]\n",
-      "\n",
-      "\n",
-      "B^-1 = \n",
-      "[[   1.11304812   -4.21303016   10.3348799  -259.5820728    10.59549009]\n",
-      " [   0.           12.47133182  -32.17766695  710.17107943  -27.8049122 ]\n",
-      " [   0.            0.            3.45700817  -95.00887424    3.64024827]\n",
-      " [   0.            0.            0.           34.94050163   -2.00211785]\n",
-      " [   0.            0.            0.            0.            1.88837548]]\n",
-      "\n",
-      "\n",
-      "BC = \n",
-      "[[ 0.89775154  0.35443469  1.00022816  1.43885578  0.74119136]\n",
-      " [ 0.          0.00921287  0.06064792  0.49233543  0.6306564 ]\n",
-      " [ 0.          0.          0.00159742  0.53370795  0.46299893]\n",
-      " [ 0.          0.          0.          0.01565434  0.02485295]\n",
-      " [ 0.          0.          0.          0.          0.35718713]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Example of upper triangular matrices\n",
     "B = np.triu(np.reshape(np.random.rand(N*N), (N,N)))\n",
@@ -355,13 +326,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "    L = identity matrix of order N\n",
+    "    d = vector of zeros with N elements\n",
+    "\n",
     "    for j = 1:N\n",
     "\n",
     "        v = L[j,:j-1]*d[:j-1]\n",
     "\n",
-    "        d[j] = A[j,j] - dot(L[j,:j-1], v[:j-1])\n",
+    "        d[j] = A[j,j] - dot(L[j,:j-1], v)\n",
     "\n",
-    "        L[j+1:,j] = (A[j+1:,j] - dot(L[j+1:,:j-1],v[:j-1]))/d[j]"
+    "        L[j+1:,j] = (A[j+1:,j] - dot(L[j+1:,:j-1],v))/d[j]"
    ]
   },
   {
@@ -476,127 +450,6 @@
     "\n",
     "6) Use the function implemented in item 3 to compute the inverse matrix and verify if $\\mathbf{A} \\mathbf{A}^{-1} = \\mathbf{I}$."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def ldlt(A):\n",
-    "    N = A.shape[0]\n",
-    "    \n",
-    "    L = np.zeros((N,N))\n",
-    "    d = np.zeros(N)\n",
-    "\n",
-    "    #for j = 1:N\n",
-    "    for j in range(N):\n",
-    "\n",
-    "        #v = L[j,:j-1]*d[:j-1]\n",
-    "        v = L[j,:j]*d[:j]\n",
-    "\n",
-    "        #d[j] = A[j,j] - dot(L[j,:j-1], v[:j-1])\n",
-    "        d[j] = A[j,j] - np.dot(L[j,:j], v[:j])\n",
-    "\n",
-    "        #L[j+1:,j] = (A[j+1:,j] - dot(L[j+1:,:j-1],v[:j-1]))/d[j]\n",
-    "        L[j+1:,j] = (A[j+1:,j] - np.dot(L[j+1:,:j],v[:j]))/d[j]\n",
-    "        \n",
-    "        return L, d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "N = 5\n",
-    "A = np.reshape(np.random.rand(N*N), (N,N))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.67144818  0.56456904  0.41961263  0.65275313  0.03113899]\n",
-      " [ 0.98847055  0.52851954  0.6075698   0.06412598  0.21480163]\n",
-      " [ 0.07108071  0.14467005  0.8028226   0.66262614  0.04989618]\n",
-      " [ 0.05033082  0.79774816  0.71223589  0.81554282  0.49053002]\n",
-      " [ 0.41712207  0.66945643  0.40929267  0.38067434  0.45524212]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print A"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "L, d = ldlt(A)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0.          0.          0.          0.          0.        ]\n",
-      " [ 1.47214719  0.          0.          0.          0.        ]\n",
-      " [ 0.1058618   0.          0.          0.          0.        ]\n",
-      " [ 0.07495861  0.          0.          0.          0.        ]\n",
-      " [ 0.6212275   0.          0.          0.          0.        ]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print L"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0.67144818  0.          0.          0.          0.        ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
