least squares and math review

--- a/Content/review_math.ipynb
+++ b/Content/review_math.ipynb
@@ -335,7 +335,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's consider some particular scalar functions and some of their partial derivatives."
+    "Let's consider some particular scalar and vector functions, as well as their partial derivatives with respect to the $j$th parameter $p_{j}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='Derivative 1'></a>\n",
+    "#### Derivative 1"
    ]
   },
   {
@@ -354,7 +362,7 @@
    "source": [
     "<a id='eq14b'></a>\n",
     "$$\n",
-    "\\frac{\\partial f(\\mathbf{p})}{\\partial p_{j}} = \\mathbf{c}^{\\top}\\mathbf{u}_{j} \\: , \\tag{14b}\n",
+    "\\frac{\\partial \\, f(\\mathbf{p})}{\\partial p_{j}} = \\mathbf{c}^{\\top}\\mathbf{u}_{j} \\: , \\tag{14b}\n",
     "$$"
    ]
   },
@@ -362,17 +370,197 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $\\mathbf{c}$ is a generic constant vector and $\\mathbf{u}_{j}$ is a vector with the $j$th element equal to $1$ and the remaining equal to $0$."
+    "where $\\mathbf{c}$ is a generic constant vector and $\\mathbf{u}_{j}$ is a vector with the $j$th element equal to $1$ and the remaining equal to $0$. It is represented as follows:"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq15'></a>\n",
+    "$$\n",
+    "\\mathbf{u}_{j} = \\begin{bmatrix}\n",
+    "0 \\\\\n",
+    "\\vdots \\\\\n",
+    "0 \\\\\n",
+    "1 \\\\\n",
+    "0 \\\\\n",
+    "\\vdots \\\\\n",
+    "0\n",
+    "\\end{bmatrix} \\: . \\tag{15}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "This vector is extremely import in the following developments."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='Derivative 2'></a>\n",
+    "#### Derivative 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq16a'></a>\n",
+    "$$\n",
+    "f(\\mathbf{p}) = \\mathbf{p}^{\\top}\\mathbf{p} \\: , \\tag{16a}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq16b'></a>\n",
+    "$$\n",
+    "\\frac{\\partial \\, f(\\mathbf{p})}{\\partial p_{j}} = \n",
+    "2 \\, \\mathbf{u}_{j}^{\\top}\\mathbf{p} \\: . \\tag{16b}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='Derivative 3'></a>\n",
+    "#### Derivative 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq17a'></a>\n",
+    "$$\n",
+    "\\mathbf{f}(\\mathbf{p}) = \\mathbf{A} \\, \\mathbf{p} \\: , \\tag{17a}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq17b'></a>\n",
+    "$$\n",
+    "\\frac{\\partial \\, \\mathbf{f}(\\mathbf{p})}{\\partial p_{j}} = \n",
+    "\\mathbf{A}^{\\top}\\mathbf{u}_{j} \\: , \\tag{17b}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $\\mathbf{A}$ is a constant matrix."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='Derivative 4'></a>\n",
+    "#### Derivative 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq18a'></a>\n",
+    "$$\n",
+    "f(\\mathbf{p}) = \\mathbf{p}^{\\top} \\mathbf{A}^{\\top} \\mathbf{A} \\, \\mathbf{p} \\: , \\tag{18a}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq17b'></a>\n",
+    "$$\n",
+    "\\frac{\\partial \\, f(\\mathbf{p})}{\\partial p_{j}} = \n",
+    "2 \\, \\mathbf{u}_{j}^{\\top} \\mathbf{A}^{\\top} \\mathbf{A} \\, \\mathbf{p} \\: . \\tag{18b}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='Derivative 5'></a>\n",
+    "#### Derivative 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq19a'></a>\n",
+    "$$\n",
+    "\\mathbf{f}(\\mathbf{p}) = \\mathbf{d} - \\mathbf{A} \\, \\mathbf{p} \\: , \\tag{19a}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq19b'></a>\n",
+    "$$\n",
+    "\\frac{\\partial \\, \\mathbf{f}(\\mathbf{p})}{\\partial p_{j}} = \n",
+    "-\\mathbf{A}^{\\top}\\mathbf{u}_{j} \\: . \\tag{19b}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "P.S.: Use the [Derivative 3](#Derivative 3)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='Derivative 6'></a>\n",
+    "#### Derivative 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq20a'></a>\n",
+    "$$\n",
+    "f(\\mathbf{p}) = \n",
+    "\\left( \\mathbf{d} - \\mathbf{A} \\, \\mathbf{p} \\right)^{\\top}\n",
+    "\\left( \\mathbf{d} - \\mathbf{A} \\, \\mathbf{p} \\right) \\: , \\tag{20a}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq20b'></a>\n",
+    "$$\n",
+    "\\frac{\\partial \\, f(\\mathbf{p})}{\\partial p_{j}} = \n",
+    "-2 \\, \\mathbf{u}_{j}^{\\top} \\mathbf{A}^{\\top}\n",
+    "\\left( \\mathbf{d} - \\mathbf{A} \\, \\mathbf{p} \\right) \\: . \\tag{20b}\n",
+    "$$"
+   ]
   }
  ],
  "metadata": {
@@ -391,7 +579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
